Fixed horizontal scrollbar issue

--- a/css/style.less
+++ b/css/style.less
@@ -37,7 +37,7 @@
 .main {
     margin-left: auto;
     margin-right: auto;
-    width: auto/*whatever width you want*/;
+    width: 100%;
 }
 
 @media (max-width: 768px) {
